Fixed a defect with the navbar so it does not show a vertical scrollbar with long navbar groups

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -7,6 +7,7 @@
 
 html, body {
   height: 100%;
+  overflow-y: hidden;           /* This ensures that a LONG navbar does NOT add a scroll bar to the page */
 }
 
 // Merriweather is to be used by default on any non-headers
